[package]
name = "crypto_key_master"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "rust library for crypto key management"
readme = "README.md"
documentation = "https://docs.rs/crypto_key_master"
homepage = "https://github.com/aaronisme/crypto_key_master"
repository = "https://github.com/aaronisme/crypto_key_master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bytes = "1.1.0"
ring = "0.16.20"
hex = "0.4.3"
aes = { version = "0.7.5", features =["ctr"]}
scrypt = { version = "0.2", default-features = false }
sha3 = "0.7.3"
serde = { version = "1.0", features =["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0"
ecdsa = { version = "0.12.4", features =["sign"]}
k256 = "0.9.6"
bip32 = "0.2.2"